Fixed wrapping

--- a/site/css/due-style.css
+++ b/site/css/due-style.css
@@ -29,12 +29,21 @@ code{
 }
 
 .longText {
-word-break: break-all;
-white-space: -moz-pre-wrap; /* Mozilla */
-white-space: -o-pre-wrap; /* Opera 7 */
-    white-space: pre-wrap;  /* CSS 2.1 */
-white-space: pre-line; /* CSS 3 */
-word-wrap: break-word; /* IE */
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  word-break: break-all;
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
 }
 
 
